--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
 
-h1{
-    color: dodgerblue;
-    font-family: monospace;
+.header{
+    background-color: #000407;
+    color: #3289cd;
+   
 }
-h3{
-    color: indigo; 
-    font-family: monospace;
+.container{
+    width: 80%;
+    
 }
-span{
-    color: dimgray; 
-    font-family: arial; 
-    font-size: 18px;
+.header .container{
+    display: flex;
+    justify-content:space-between;
+}
+.navbar{
+    display: flex;
+    list-style: none;
+    width: 400px;
+    justify-content: space-evenly;
+}
 
-}
-.destaque{
-    background-color: yellow;
-}
-#destaqueEspecial{
-    background-color: aquamarine;
-}
