--- a/style.css
+++ b/style.css
@@ -1,21 +1,111 @@
-
+body{
+    margin: 0;
+    padding: 0;
+    font-family: "Exo 2", sans-serif;
+}
 .header{
     background-color: #000407;
     color: #3289cd;
+    border-bottom: 3px solid #3289cd;
    
 }
 .container{
     width: 80%;
+    margin:0 auto ;
     
 }
 .header .container{
     display: flex;
     justify-content:space-between;
 }
+.banner .container.login{
+    justify-content: center;
+}
+.agora{
+    font-weight: bolder;
+}
 .navbar{
     display: flex;
     list-style: none;
     width: 400px;
     justify-content: space-evenly;
+    align-items: center;
+}
+.navbar a{
+    text-decoration: none;
+    color: #e3b062;
 }
 
+.banner{
+    background-image: url('bg-jelly-fish-para_outras_pags.png');
+    background-size: cover;
+}
+.banner .container{
+    height: 550px;
+    display: flex;
+    color: white;
+    align-items: center;
+}
+
+.banner p{
+    font-size: 36px;
+    width: 280px;
+    margin-left: 20%;
+}
+
+.footer{
+    background-color: #3289cd;
+    color: white;
+}
+.footer .container{
+display: flex;
+height: 150px;
+align-items: center ;
+justify-content: center;
+}
+
+.card{
+    background-color: #e5e5e5;
+    color:#e6005a;
+    height: 350px;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.card h2{
+    margin: 0;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    margin-top: 24px;
+    width: 250px;
+}
+
+
+form label{
+    margin-top: 8px;
+}
+form input{
+    margin-top: 8px;
+    outline: #3289cd 3px solid;
+    border: 0;
+    padding: 8px;
+    border-radius: 10px;
+
+}
+.card button{
+    margin-top: 16px;
+    padding: 10px 15px;
+    background-color: #e6005a;
+    color: white;
+    width: 120px;
+    align-self: center;
+    border-radius:5px ;
+    font-size: 18px;
+    border: 0;
+    cursor: pointer;
+
+}
